--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glance\n",
+    "import gawp\n",
     "import skimage as ski\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [21/Jan/2025 09:40:17] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
-    "glance.in_web(image)"
+    "gawp.in_web(image)"
    ]
   },
   {
@@ -239,7 +247,7 @@
    ],
    "source": [
     "# Experimental\n",
-    "glance.inline(image)"
+    "gawp.inline(image)"
    ]
   },
   {
@@ -306,7 +314,7 @@
     }
    ],
    "source": [
-    "glance.in_web(fig)"
+    "gawp.in_web(fig)"
    ]
   },
   {
@@ -504,7 +512,7 @@
    ],
    "source": [
     "# Experimental\n",
-    "glance.inline(fig)"
+    "gawp.inline(fig)"
    ]
   }
  ],
